--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,11 @@ html, body, #root {
   margin: 0;
 }
 canvas { display: block }
+
+.background {
+  width: 100vw;
+  height: 100vh;
+  background: url('./images/bg.png') no-repeat center center fixed;
+  background-size: cover;
+  position: relative;
+}
